--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
-after_sucess:
-  - ./run-benchmarks.sh
+
+script:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn test -B
+  - bash run-benchmarks.sh
+  - cat run-results.txt
